--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -1,3 +1,183 @@
-<p>
-  quemSomos works!
-</p>
+<div >
+  <div class="w-100 d-flex flex-wrap fundoRosa defineFont {{isMobile? '':'contemPaginas'}}" style="padding-right: 2.3rem;">
+    <div class="{{isMobile? 'col-12 ms-3':'col-7'}}">
+      <div class="col-12 pt-4 pb-4">
+        <h1><strong class="fontTitulo2">O CENTRO PROINF</strong></h1>
+      </div>
+      <div class="col-12">
+        <P class="fs-5 formataParagrafos" >
+          A Proinf emerge com um farol de excelência e inovação no comapo da proteção à infância e juventude, dedicando-se a capacitar aqueles
+          que desejam fazer a difeerença. <strong>Inspirada na cooperação em rede, a Proinf não é apenas um centro de estudos;</strong>
+          é um movimento para fortalecer o ensino jurídico com foco na proteção infantojuvenil, superando barreiras de incompreensão para
+          tecer uma rede de conhecimento, apoio e ação conjunta.
+        </P>
+      </div>
+      <div class="col-12 d-flex flex-wrap pt-4">
+        <div class="{{isMobile? 'col-12':'col-4'}}">
+          <a href="#no" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> O nó </a>
+        </div>
+        <div class="{{isMobile? 'col-12 pt-4':'ps-4 px-2 col-4'}} ">
+          <a href="#historia" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> Nossa história </a>
+        </div>
+        <div class="{{isMobile? 'col-12 pt-4':'ps-4 col-4'}}">
+          <a href="#fundamentos" [style]="isMobile?'width:100%':'width: 95%;'" class="btn rounded-pill btn-outline-dark pt-3 pb-3"> Os fundamentos </a>
+        </div>
+      </div>
+    </div>
+
+    <div class="{{isMobile? 'col-12':'col-5'}}">
+      <img src="../../../../assets/imgs/site proinf quem somos e cursos/11.png" alt="" height="{{isMobile?'424':'500'}}">
+    </div>
+  </div>
+  <div class=" flex-wrap {{isMobile? '':'contemPaginas'}}">
+    <div id="no" class="w-100">
+      <div class="col-12 pt-4 pb-4 d-flex flex-wrap {{isMobile? 'ps-3':''}}">
+        <div class="w-100">
+          <h1><strong class="fontTitulo2">Por que o nó?</strong></h1>
+        </div>
+
+        <div class=" {{isMobile? 'col-12 pe-3':'col-6'}} ">
+          <img class="me-3" style="float: left;" src="../../../../assets/imgs/logoMobile.png" alt="" height="{{isMobile? '100':'150'}}">
+          <P class="formataParagrafos fs-5" >
+            Em nosso coração, o nó não é apenas um simbolo, mas a própria essência da Proinf,
+            <strong>Ele encapsula a colaboração e a interconexão, enfatizando a necessidade
+              vital de criar vinculos fortes e significativos entre todos nós. </strong>
+            Este nó simboliza a união de esforços, a partilha de saberes e o compromisso, mútuo em salvaguardar
+          o bem-estar de crianças e adolescentes. Aprender a fazer um nó é um rito de passagem na infãncia,
+          um lembrete de que, juntos, podemmos enfrentar desafios e superar obstáculos.</P>
+        </div>
+        <div class="{{isMobile? 'col-12 pe-3':'col-6 d-flex justify-content-end ps-4'}}">
+          <img class="me-3" src="../../../../assets/imgs/site proinf quem somos e cursos/12.png" alt="" height="{{isMobile? '390':'450'}}">
+
+        </div>
+      </div>
+      <div >
+
+      </div>
+    </div>
+
+    <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+      <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+        <div class=" col-2 d-flex justify-content-center">
+          <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+        </div>
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="historia" class="w-100 {{isMobile? 'ps-3':'' }}">
+      <div class="w-100">
+        <h1><strong class="fontTitulo">NOSSA HISTÓRIA</strong></h1>
+      </div>
+      <div class="col-12 {{isMobile? 'pe-3':'' }}">
+        <P class="formataParagrafos fs-5" >
+          A história da Proinf, o Centro de Estudos em Proteção Infantojuvenil, começa com a união de duas mentes visionárias e comprometidas:
+          Bruno César da Silva e Isabelle Lucena Paiva. Situados na vibrante cidade de Ribeirão Preto, Bruno e isabella compartilharam uma paixão comum:
+        <strong>Tranformar a proteção e defesa dos direitos de crianças e adolescentes através da educação jurídica.</strong></P>
+      </div>
+
+      <div class="col-12 d-flex flex-wrap" style="margin-top: 7rem !important;">
+        <div class="flex-wrap {{isMobile? 'col-12 pe-3':'col-4 pe-4' }}">
+          <div class="caixa">
+            <div class=" text-center fontTitulo2 m-4 p-2 caixaTitulo formataParagrafos" >
+              Origens <br>e inspiração
+            </div>
+            <div class=" m-4 formataParagrafos fs-5 caixaBody"> Bruno César da silva e Isabelle Lucena Paiva, unidos pela paixão de proteger direitos infanto juvenis, combinaram a experiência prática de Bruno
+              como defensor público e professor, com o rigor acadêmico e a pesquisa de Isabelle, criando uma base sólida para a fundação do Proinfo.
+            </div>
+          </div>
+        </div>
+        <div class="{{isMobile? 'col-12 pe-3':'col-4 pe-4' }} flex-wrap " [style]="isMobile? 'padding-top:5rem':''">
+          <div class="caixa">
+            <div class=" text-center fontTitulo2 m-4 p-2 caixaTitulo formataParagrafos" style="background-color: #ed8f00;">
+              Fundação <br>e Missão
+            </div>
+            <div class=" mx-4 mt-4 formataParagrafos fs-5 caixaBody">
+              O Proinf nasceu para preencher uma lacuna na educação jurídica, focando exclusivamente na proteção da infância e juventude de
+              forma acessível e profunda. Seu objetivo principal é capacitar profissionais para defender os direitos das
+              crianças e do adolescentes com competência e sensibilidade.
+            </div>
+          </div>
+        </div>
+        <div class="{{isMobile? 'col-12 pe-3':'col-4' }} flex-wrap" [style]="isMobile? 'padding-top:5rem':''">
+          <div class="caixa">
+            <div class=" text-center fontTitulo2 m-4 p-2 caixaTitulo formataParagrafos" style="background-color: #2c46db;">
+              Futuro <br>e Visão
+            </div>
+            <div class=" m-4 formataParagrafos fs-5 caixaBody">
+              Com um olhar para o futuro, o Proinf aspira a expandir seu impacto por meio de tecnologias inovadoras de ensino, parcerias
+              estratégias e um compromisso contínuo de inspirar defensores dos direitos da criança e do adolescente, visando criar uma sociedade mais segura
+              e acolhedora para os jovens.
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <div class="w-100 d-flex justify-content-center mt-5 mb-5">
+      <div class="col-12 d-flex" style="top: 24px; position: relative;" >
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+        <div class=" col-2 d-flex justify-content-center">
+          <img src="../../../../assets/imgs/divideNoMeio.png" class="image" height="50">
+        </div>
+        <div class="col-5">
+          <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5 w-100"></div>
+        </div>
+      </div>
+    </div>
+
+    <div id="fundamentos" class="w-100 {{isMobile? 'ps-3':''}}">
+      <div class="w-100">
+        <h1><strong class="fontTitulo">OS FUNDADORES</strong></h1>
+      </div>
+      <div class="col-12 d-flex flex-wrap">
+        <div class="{{isMobile? 'col-12':'col-6'}} flex-wrap">
+          <img style="border-radius: 20px;"
+          src="../../../../assets/imgs/site proinf quem somos e cursos/a.png"
+          class="" height="{{isMobile? '630':'780'}}">
+
+          <div class="w-100 pt-5">
+            <h1><strong class="fontTitulo2 my-4">Bruno César da Silva</strong></h1>
+          </div>
+          <p class="formataParagrafos my-4 {{isMobile? 'pe-3':'pe-4'}} fs-5">
+            Defensor píblico renomado e professor apaixonado, cuja trajetória profissional é
+            marcada pela dedicação aos direitos da criança e do adolescente. Formado em
+            Direito, Bruno encontrou sua vocação na defesa pública, especializando-se na proteção
+            jurídica de menores em situação de vulnerabilidade.
+            Complementando sua prática jurídica, ele seguiu o caminho acadêmico, tornando-se
+            doutorando em Psicologia pela universidade de São Paulo (USP) em Riveirão Preto, com um foco em estudos
+            que unem Direito e Psicologia na defesa dos direitos infantojuvenis. Com professor, Bruno compartilha seu vasto
+            conhecimento e experiência, inspirando futuras gerações de juristas a abordarem a lei com
+            compaixão e dedicação.
+          </p>
+        </div>
+        <div class="{{isMobile? 'col-12':'col-6 ps-3'}}  flex-wrap">
+          <img style="border-radius: 20px;"
+          src="../../../../assets/imgs/site proinf quem somos e cursos/b.png"
+          class="" height="{{isMobile? '630':'780'}}">
+
+          <div class="w-100 pt-5">
+            <h1><strong class="fontTitulo2 my-4">Isabelle Lucena Paiva</strong></h1>
+          </div>
+          <p class="formataParagrafos my-4 {{isMobile? 'pe-3':'pe-4'}} fs-5">
+            Pesquisadora e acadêmica cuja  paixão pelo Direito da Criança e do Adolescente a levou
+            a contribuições significativas tanto no campo jurídico quanto educacional. Graduada em Direito, Isabelle
+            não tardou a mergulhar no mundo da pesquisa, optando por focar em estudos que exploram as
+            desigualdades dentro do acesso á justiça para criança e adolescentes. Atualmente, ela é mestrada na USP, onde seu
+            trabalho no grupo de Pesquisa "Acesso à Justiça e Desigualdades" tem sido crucial para entender
+            e desenvolver melhores práticas de proteção jurídica para o publico infantojuvenil. Isabelle é conhecida
+            por sua habilidade de comunicar questões complexas de maneira clara e engajante, tornando-a uma educadora admirada e uma voz
+            inflente na advocacia pelos direitos da crianças.
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
