--- a/cursoADVweb/src/app/blog/blog.component.html
+++ b/cursoADVweb/src/app/blog/blog.component.html
@@ -97,6 +97,6 @@
     </div>
   </div>
 </div>
-<div class="row text-center">
+<div class="w-100 pt-4 text-center">
   <span class="p-4 fs-5">Centro ProInf © 2024 - Todos os direitos reservados</span>
 </div>
