--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.scss
@@ -102,3 +102,13 @@
   left: 269px;
   color: #EE5b54;
 }
+
+.aspasMobile {
+  font-size: 5rem;
+  position: absolute;
+  z-index: 2;
+  left: 269px;
+  top: 2.0rem;
+  color: #EE5b54;
+}
+
