--- a/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
+++ b/cursoADVweb/src/app/blog/pages/quemSomos/quemSomos.component.html
@@ -1,6 +1,6 @@
 <div >
-  <div class="w-100 d-flex flex-wrap fundoRosa defineFont {{isMobile? '':'contemPaginas'}}" style="padding-right: 2.3rem;">
-    <div class="{{isMobile? 'col-12 ms-3':'col-7'}}">
+  <div class="w-100 d-flex flex-wrap fundoRosa defineFont" [style]="isMobile? '':'padding-left: 7rem;'">
+    <div class="{{isMobile? 'col-12 px-3':'col-7'}}">
       <div class="col-12 pt-4 pb-4">
         <h1><strong class="fontTitulo2">O CENTRO PROINF</strong></h1>
       </div>
@@ -25,7 +25,7 @@
       </div>
     </div>
 
-    <div class="{{isMobile? 'col-12':'col-5'}}">
+    <div class="{{isMobile? 'col-12':'col-5'}} d-flex justify-content-end">
       <img src="../../../../assets/imgs/site proinf quem somos e cursos/11.png" alt="" height="{{isMobile?'368':'500'}}">
     </div>
   </div>
