--- a/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
+++ b/cursoADVweb/src/app/blog/pages/inicio/inicio.component.html
@@ -22,8 +22,8 @@
 </div>
 
 <div class="col-12 d-flex flex-wrap" [style]="isMobile? 'margin-top: 5rem !important;':'padding-left: 5rem !important; margin-top: 5rem !important;'">
-  <div class="col-sm-12 col-md-6 col-lg-6 defineFont {{isMobile? 'mx-3':'pe-5'}}">
-    <h1 class="" style="color:#EE5b54"> <strong style="font-size: 33px;">O CENTRO PROINF</strong></h1>
+  <div class="defineFont {{isMobile? ' col-12 px-3':' col-6 pe-5'}}">
+    <h1 class=""> <strong class="fontTitulo">O CENTRO PROINF</strong></h1>
     <p class="fs-5 mt-4 formataParagrafos">
       A ProInf emerge como um farol de excelência e
       inovação no campo da proteção à infância e
@@ -51,9 +51,9 @@
   </div>
 </div>
 
-<div class="imagensQueViram col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':'padding-bottom: 11rem;'">
-  <div class=" defineFont {{isMobile? 'mx-3':''}}">
-    <h1 class="" style="color:#EE5b54"> <strong style="font-size: 33px;">NOSSOS FUNDAMENTOS</strong></h1>
+<div class="imagensQueViram col-12 d-flex flex-wrap {{isMobile?'':'px-5'}}"  [style]="isMobile? 'margin-top: 5rem !important;':'padding-bottom: 11rem; padding-left: 5rem !important;'">
+  <div class=" defineFont {{isMobile? 'px-3':''}}">
+    <h1 class=""> <strong class="fontTitulo2">NOSSOS FUNDAMENTOS</strong></h1>
     <p class="fs-5 mt-4 formataParagrafos">
       Na busca por oferecer a mais completa e eficaz preparação para concursos na área de Defensoria
       Pública, com foco especial no Direito da Criança e do Adolescente, estabelecemos três pilares
@@ -134,12 +134,12 @@
 </div>
 
 <div class="w-100 d-flex justify-content-center mt-5 ">
-  <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex justify-content-center" style="top: 24px; position: relative;" >
-    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
-    <div class="{{isMobile?'col-4':'col-3'}}">
+  <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
+    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
+    <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
       <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
     </div>
-    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
   </div>
 </div>
 
@@ -245,16 +245,16 @@
 </div>
 
 <div class="w-100 d-flex justify-content-center mt-5 ">
-  <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex justify-content-center" style="top: 24px; position: relative;" >
-    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
-    <div class="{{isMobile?'col-4':'col-3'}}">
+  <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
+    <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
+    <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
       <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
     </div>
-    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+    <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
   </div>
 </div>
 
-<div class="w-100 d-flex flex-wrap fundoRosa pt-5">
+<div class="w-100 d-flex flex-wrap fundoRosa pt-5 justify-content-center">
   <div class="imagemDeFundo" [style]="isMobile? 'width: 1px;':''"  >
 
   </div>
@@ -308,12 +308,12 @@
     </div>
   </div>
   <div class="w-100 d-flex justify-content-center mt-5 ">
-    <div class="col-8 col-sm-8 col-md-3 col-lg-3 d-flex justify-content-center" style="top: 24px; position: relative;" >
-      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-4 mt-4 col-5"></div>
-      <div class="{{isMobile?'col-4':'col-3'}}">
+    <div class="col-12 d-flex justify-content-center" style="top: 24px; position: relative;" >
+      <div style="border-style: solid none none none; border-color: #ed8f00;" class="me-2 mt-4 col-5"></div>
+      <div class="{{isMobile?'col-4':'col-1'}} d-flex justify-content-center">
         <img src="../../../../assets/imgs/divideNoMeio.png" class="" height="50">
       </div>
-      <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-4 mt-4 col-5"></div>
+      <div style="border-style: solid none none none; border-color: #ed8f00" class="ms-2 mt-4 col-5"></div>
     </div>
   </div>
 </div>
