--- a/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
+++ b/cursoADVweb/src/app/blog/pages/cursos/cursos.component.html
@@ -146,7 +146,7 @@
         <div class="card" style="width: 18rem;">
           <h4 class="text-center textImagem">
             <p class="text defineFont mt-2" style="width: 100%;">
-              <strong class="fontTitulo">EM BREVE</strong>
+              <strong class="">EM BREVE</strong>
             </p>
           </h4>
           <img src="assets/imgs/site proinf quem somos e cursos/6.png" class="card-img-top" alt="...">
